fix(ui): Layout jumps on images

--- a/src/ui/EpisodeInfo/EpisodeInfo.module.css
+++ b/src/ui/EpisodeInfo/EpisodeInfo.module.css
@@ -7,6 +7,7 @@
 .info img {
   height: var(--dimen-podcast-info-cover);
   width: var(--dimen-podcast-info-cover);
+  min-width: var(--dimen-podcast-info-cover);
 }
 
 .info .text {
